--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.10",
+    "jose": "^6.0.10",
+    "jsonwebtoken": "^9.0.2",
     "kysely": "^0.27.5",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
@@ -68,6 +70,7 @@
     "@eslint/eslintrc": "^3",
     "@prisma/client": "^6.4.1",
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.17.22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
