--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toggle": "^1.1.6",
     "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-query": "^5.77.0",
     "@tiptap/extension-highlight": "^2.11.7",
     "@tiptap/extension-image": "^2.12.0",
     "@tiptap/extension-link": "^2.12.0",
