--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
       - DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@db:5432/${DB_NAME}
       - NEXTAUTH_URL=http://14.225.212.72
       - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
+    volumes:
+      - ./public/uploads:/app/public/uploads
     networks:
       - app-network
     depends_on:
