--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,39 +12,39 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    # networks:
-    #   - app-network
+    networks:
+      - app-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
       interval: 5s
       timeout: 5s
       retries: 5
 
-  # web:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   container_name: gem-next
-  #   restart: always
-  #   ports:
-  #     - "80:3000"
-  #   environment:
-  #     - NODE_ENV=production
-  #     - DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@db:5432/${DB_NAME}
-  #     - NEXTAUTH_URL=http://14.225.212.72
-  #     - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
-  #     - NEXT_PUBLIC_API_URL=http://14.225.212.72
-  #   volumes:
-  #     - ./public/uploads:/app/public/uploads
-  #   networks:
-  #     - app-network
-  #   depends_on:
-  #     db:
-  #       condition: service_healthy
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: gem-next
+    restart: always
+    ports:
+      - "80:3000"
+    environment:
+      - NODE_ENV=production
+      - DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@db:5432/${DB_NAME}
+      - NEXTAUTH_URL=http://14.225.212.72
+      - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
+      - NEXT_PUBLIC_API_URL=http://14.225.212.72
+    volumes:
+      - ./public/uploads:/app/public/uploads
+    networks:
+      - app-network
+    depends_on:
+      db:
+        condition: service_healthy
 
 volumes:
   postgres_data:
 
-# networks:
-#   app-network:
-#     driver: bridge
+networks:
+  app-network:
+    driver: bridge
